# llmwikidoc

./: .gitignore  .llmwikidoc.toml  CLAUDE.md  PLAN.md  README.md  llmwikidoc.spec  main.py  pyproject.toml  show_wiki.py  wiki.html
hooks/: post-commit
src/llmwikidoc/: __init__.py  cli.py  confidence.py  config.py  consolidate.py  git_reader.py  graph.py  ingest.py  ingest_files.py  lint.py  llm.py  search.py  wiki.py
tests/: conftest.py  test_confidence.py  test_config.py  test_consolidate.py  test_graph.py  test_ingest.py  test_lint.py  test_search.py  test_wiki.py
wiki/: confidence.json  graph.json  index.md  log.md
wiki/.embeddings/: cache.json
wiki/concepts/: __version__.md  _batch_char_budget.md  app.md  cached_embeddings.md  cli_entry_point.md  codegraph.md  commit_ingestion.md  confidence_scoring.md  confidence_settings.md  configuration_management.md  console_output.md  consolidation_tiers.md  context_depth.md  crud_operations.md  database.md  dataclass.md  digest.md  ebbinghaus_decay.md  ebbinghaus_retention_decay.md  environment_variable_api_key.md  episodic.md  episodic_tier.md  episodic_ttl_days.md  excluded_dirs.md  excluded_files.md  exponential_backoff.md  fact_promotion.md  file_ingestion.md  frontmatter.md  gemini-25-flash.md  gemini-embedding-001.md  gemini_api.md  gemini_api_key.md  git_commit.md  git_commit_hook.md  git_hook.md  git_post-commit_hook.md  gitignore.md  gitpython.md  google-genai.md  (+59 more)
wiki/entities/: _apply_decay.md  _apply_extraction.md  _batch_files.md  _build_extraction_prompt.md  _build_file_extraction_prompt.md  cli.md  (+115 more)
(+1 files in other folders)
